[tool.poetry]
name = "csp_python"
version = "0.1.0"
description = ""
authors = ["Saranga Komanduri <sarangak@cs.cmu.edu>"]

[tool.poetry.scripts]
solver = "csp_python:main"

[tool.poetry.dependencies]
python = "^3.7"
ortools = "^7"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
